@@ -58,6 +58,8 @@ gtk+4.0 (3.94.0-1) UNRELEASED; urgency=medium
   * d/tests/build: Update for GTK+ 4.0
   * d/missing-sources: Remove, no longer needed
   * Fix generation of README.md.gz symlinks
+  * Generate a dependency on libgtk-4-0.9400.0 since the ABI is not yet
+    stable
 
  -- Jeremy Bicha <jbicha@debian.org>  Fri, 19 Jan 2018 22:05:35 -0500
 
